@@ -2,6 +2,8 @@
  * The Marlin CNC Pendant project
  *
  * A jogwheel based pendant controller to interface to Marlin / Arduino controlled 3D printers & CNCs 
+ * 
+ * Can be used with ebay stye jogwheel pendants and custom setups
  *
  * Interfacing to Marlin joystick code: https://github.com/vector76/Marlin/commit/2d258d649795fa062b95afac60ea639e61bc7585
  * 
@@ -9,12 +11,9 @@
  * 
  ***/
 
-
-
-
 // Development and release version - Don't forget to update the changelog!!
 #define VERSION "V1.0-Alpha"
-#define BUILD "19122001"
+#define BUILD "19122702"
 
 
 /****************************************
@@ -32,10 +31,11 @@
 #define X_AXIS_SELECTED 1
 #define Y_AXIS_SELECTED 2
 #define Z_AXIS_SELECTED 3
-#define JOG_SPEED_100_SELECTED 1
-#define JOG_SPEED_10_SELECTED 2
-#define JOG_SPEED_1_SELECTED 3
-#define JOG_SPEED_01_SELECTED 4
+
+#define JOG_SPEED_1000_SELECTED 1
+#define JOG_SPEED_100_SELECTED 2
+#define JOG_SPEED_10_SELECTED 3
+#define JOG_SPEED_1_SELECTED 4
 
 
 /****************************************
@@ -45,6 +45,7 @@
 volatile int previousValue = 0;
 volatile int counterValue = 0;
 volatile bool jogActive = false;
+volatile int moveVector = 0;
 
 
 /****************************************
@@ -60,8 +61,25 @@ void setup ()
     pinMode(JOGWHEEL_PIN_A, INPUT_PULLUP); 
     pinMode(JOGWHEEL_PIN_B, INPUT_PULLUP);
 
-    attachInterrupt(0, jogwheelInterrupt, CHANGE); 
-    attachInterrupt(1, jogwheelInterrupt, CHANGE);
+    attachInterrupt(INTERRUPT_A, jogwheelInterrupt, CHANGE); 
+    attachInterrupt(INTERRUPT_B, jogwheelInterrupt, CHANGE);
+
+    pinMode(ENABLE_PIN, INPUT_PULLUP);          
+    pinMode(JOG_SPEED_100_PIN, INPUT_PULLUP);   
+    pinMode(JOG_SPEED_10_PIN, INPUT_PULLUP);    
+    pinMode(JOG_SPEED_1_PIN, INPUT_PULLUP);     
+    
+    pinMode(X_AXIS_SELECT_PIN, INPUT_PULLUP);   
+    pinMode(Y_AXIS_SELECT_PIN, INPUT_PULLUP); 
+    pinMode(Z_AXIS_SELECT_PIN, INPUT_PULLUP);  
+
+    pinMode(ENABLE_OUT_PIN, OUTPUT);
+    pinMode(X_AXIS_OUT_PIN, OUTPUT);
+    pinMode(Y_AXIS_OUT_PIN, OUTPUT);  
+    pinMode(Z_AXIS_OUT_PIN, OUTPUT);  
+
+
+
   
 }
 
@@ -69,6 +87,8 @@ void setup ()
 
 /****************************************
  * JOGWHEEL INTERRUPT
+ * Decode jogwheel data. Will work with any two phase encoder wheel
+ * NOTE: Inputs pins need to be interrupt 0 & 1 (pins 2 & 3 on a nano)
  ***/
 void jogwheelInterrupt() {
     int A = digitalRead(JOGWHEEL_PIN_A); 
@@ -93,30 +113,26 @@ void jogwheelInterrupt() {
 
     previousValue = currentValue;
 
+   // Decode the direction
+    if(counterValue >= 4) {
+        counterValue -= 4;
+        moveVector =  1;
+    } else if(counterValue <= -4) {
+        counterValue += 4;
+        moveVector =  -1;
+    }    
+
+    // Control the loop cycle - we only want to process actual encoder clicks
     jogActive = true;
 }
 
 
 
-/****************************************
- * DECODE JOGWHEEL
- ***/
-int decodeJogwheel() {
-  
-    if(counterValue >= 4) {
-        counterValue -= 4;
-        return 1;
-
-    } else if(counterValue <= -4) {
-        counterValue += 4;
-        return -1;
-    } 
-}
-
-
 
 /****************************************
  * GET AXIS
+ * Decode selected axis
+ * Designed for rotary switches where only selected axis is active / high
  ***/
 int getAxis() {
     
@@ -137,18 +153,18 @@ int getAxis() {
 
 /****************************************
  * GET SPEED
+ * Decode selected speed
+ * Designed for rotary switches where only selected speed is active / high
  ***/
 int getSpeed() {
 
     int JOG_SPEED_100_ACTIVE = digitalRead(JOG_SPEED_100_PIN); 
     int JOG_SPEED_10_ACTIVE = digitalRead(JOG_SPEED_10_PIN); 
     int JOG_SPEED_1_ACTIVE = digitalRead(JOG_SPEED_1_PIN); 
-    int JOG_SPEED_01_ACTIVE = digitalRead(JOG_SPEED_01_PIN); 
 
     if (JOG_SPEED_100_ACTIVE) return JOG_SPEED_100_SELECTED;
     if (JOG_SPEED_10_ACTIVE) return JOG_SPEED_10_SELECTED;
     if (JOG_SPEED_1_ACTIVE) return JOG_SPEED_1_SELECTED;
-    if (JOG_SPEED_01_ACTIVE) return JOG_SPEED_01_SELECTED;
 
 }
 
@@ -159,61 +175,55 @@ int getSpeed() {
  ***/
 void sendJogSignal(int selectedAxis, int selectedSpeed, int moveVector) {
 
-    int outputVoltage;
+    int outputValue;
 
-    //TODO #1 decode voltage value to send
+    // Info from Joystick function
     // Use M114 to determine reasonable values for these after connecting your hardware
     // { Minimum value, dead zone start, dead zone end, maximum value }
     //#define JOY_X_LIMITS { 5600, 8190-100, 8190+100, 10800 }
     //#define JOY_Y_LIMITS { 5600, 8250-100, 8250+100, 11000 }
     //#define JOY_Z_LIMITS { 4800, 8080-100, 8080+100, 11550 }
     
-
+    // Decode which speed is selected and determine output voltage from move vector and multiplier
     switch (selectedSpeed)
     {
+
         case JOG_SPEED_100_SELECTED:
-            outputVoltage = JOG_SPEED_100_VOLTAGE * moveVector;
+            outputValue = DEAD_BAND_CENTRE_VALUE + (JOG_SPEED_100_MULTIPLER * moveVector);
         break;
 
         case JOG_SPEED_10_SELECTED:
-            outputVoltage = JOG_SPEED_10_VOLTAGE * moveVector;
+            outputValue = DEAD_BAND_CENTRE_VALUE + (JOG_SPEED_10_MULTIPLER * moveVector);
         break;
 
         case JOG_SPEED_1_SELECTED:
-            outputVoltage = JOG_SPEED_1_VOLTAGE * moveVector;
-        break;
-
-        case JOG_SPEED_01_SELECTED:
-            outputVoltage = JOG_SPEED_01_VOLTAGE * moveVector;
+            outputValue = DEAD_BAND_CENTRE_VALUE + (JOG_SPEED_1_MULTIPLER * moveVector);
         break;
 
     }
 
-
+    // Select the axis and send the output (lets also make sure other axis are not moved)
     switch (selectedAxis)
     {
         case X_AXIS_SELECTED:
-            analogWrite(X_AXIS_OUT_PIN, outputVoltage);
+            analogWrite(X_AXIS_OUT_PIN, outputValue);
+            analogWrite(Y_AXIS_OUT_PIN, DEAD_BAND_CENTRE_VALUE);
+            analogWrite(Z_AXIS_OUT_PIN, DEAD_BAND_CENTRE_VALUE);
         break;
 
         case Y_AXIS_SELECTED:
-            analogWrite(Y_AXIS_OUT_PIN, outputVoltage);
+            analogWrite(X_AXIS_OUT_PIN, DEAD_BAND_CENTRE_VALUE);
+            analogWrite(Y_AXIS_OUT_PIN, outputValue);
+            analogWrite(Z_AXIS_OUT_PIN, DEAD_BAND_CENTRE_VALUE);
         break;
 
         case Z_AXIS_SELECTED:
-            analogWrite(Z_AXIS_OUT_PIN, outputVoltage);
+            analogWrite(X_AXIS_OUT_PIN, DEAD_BAND_CENTRE_VALUE);
+            analogWrite(Y_AXIS_OUT_PIN, DEAD_BAND_CENTRE_VALUE);
+            analogWrite(Z_AXIS_OUT_PIN, outputValue);
         break;
 
     }
-
-
-    #if defined DEV_MODE
- //       Serial.print("Jog Speed:  ");
- //       Serial.print(selectedSpeed);
- //       Serial.print(" Axis: ");
- //       Serial.println(selectedAxis);
-    #endif  
-
 
 }
 
@@ -226,16 +236,13 @@ void loop(){
 
     // Decode axis & speed selector switches
     int selectedAxis = getAxis();
-    int selectedSpeed = getSpeed();
-    int moveVector;     
+    int selectedSpeed = getSpeed();    
 
-    // If encoder motion detected, decode move direction
+    // If encoder motion not detected, zero the move vector
     if (jogActive == true) {
-        moveVector = decodeJogwheel();
         jogActive = false; 
     } else {
-        moveVector = 0;
-        counterValue = 0;
+       moveVector = 0;
     }
 
     #if defined DEV_MODE
@@ -247,7 +254,7 @@ void loop(){
         }
     #endif  
         
-    //send appropriate output to Marlin
+    // Send move data to Marlin
     sendJogSignal(selectedAxis, selectedSpeed, moveVector);
 
 
