@@ -1,2 +1,5 @@
+19122703 - #1 Speed scaling added to code
+		 - #2 Direction artifacts
+19122702 - Decode function completed
 19122701 - Bench test complete
 19122001 - Initial commit
